--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
+    "lint:css": "stylelint \"src/**/*.{css,scss}\"",
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest"
@@ -82,6 +83,8 @@
     "jsdom": "^20.0.3",
     "lovable-tagger": "^1.1.13",
     "postcss": "^8.5.6",
+    "stylelint": "^15.11.0",
+    "stylelint-config-tailwindcss": "^1.0.1",
     "tailwindcss": "^3.4.19",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
